Correct spacing between nav & sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,8 @@ Add padding-top & negative margin-top same as height of nav*/
 #about,
 #work,
 #contact {
-    padding-top: 100px;
-    margin-top: -100px;
+    padding-top: 99px;
+    margin-top: -99px;
     position: relative;
 }
 .about-wrapper,
